[gd_scene load_steps=24 format=3 uid="uid://3wqbe5lu4ae3"]

[ext_resource type="PackedScene" uid="uid://cwaack610yv0r" path="res://scenes/background.tscn" id="1_dv138"]
[ext_resource type="Script" path="res://scenes/main.gd" id="1_ey2qo"]
[ext_resource type="PackedScene" uid="uid://dadti1oq8bing" path="res://scenes/game_over_menu.tscn" id="2_ppjvr"]
[ext_resource type="PackedScene" uid="uid://cb8xw3c64fmmw" path="res://scenes/1.tscn" id="2_q266r"]
[ext_resource type="PackedScene" uid="uid://du14shgr1juxh" path="res://scenes/2.tscn" id="3_frukf"]
[ext_resource type="PackedScene" uid="uid://2u4h0am5eg38" path="res://scenes/hud.tscn" id="3_iacyd"]
[ext_resource type="PackedScene" uid="uid://du8m4axbefgxu" path="res://scenes/3.tscn" id="4_4d7pi"]
[ext_resource type="PackedScene" uid="uid://cyk87h2cy25of" path="res://scenes/exit_menu.tscn" id="4_xo1td"]
[ext_resource type="PackedScene" uid="uid://bch32cmnmikjd" path="res://scenes/instructions_menu.tscn" id="5_8sbdr"]
[ext_resource type="PackedScene" uid="uid://bf8qp70whqbew" path="res://scenes/4.tscn" id="5_n71t5"]
[ext_resource type="PackedScene" uid="uid://8yvbmer1e44t" path="res://scenes/5.tscn" id="6_hp1xy"]
[ext_resource type="PackedScene" uid="uid://cmu62rpp1wogv" path="res://scenes/credits_menu.tscn" id="6_jn74s"]
[ext_resource type="PackedScene" uid="uid://c4c1unpy0yfnw" path="res://scenes/6.tscn" id="7_em202"]
[ext_resource type="PackedScene" uid="uid://b0hv766tp3f84" path="res://scenes/7.tscn" id="8_7eqsv"]
[ext_resource type="PackedScene" uid="uid://c3jesrm7l1406" path="res://scenes/8.tscn" id="9_uavix"]
[ext_resource type="PackedScene" uid="uid://nhx11cte5ujb" path="res://scenes/9.tscn" id="10_1ul6q"]
[ext_resource type="PackedScene" uid="uid://coh1n4xw6sty3" path="res://scenes/10.tscn" id="11_ldtxg"]
[ext_resource type="PackedScene" uid="uid://bcchqdgquxg3l" path="res://scenes/11.tscn" id="12_55gry"]
[ext_resource type="PackedScene" uid="uid://ky2vtg5yidkf" path="res://scenes/12.tscn" id="13_op1cr"]
[ext_resource type="PackedScene" uid="uid://be2et4r6ym4tt" path="res://scenes/13.tscn" id="14_y2fug"]
[ext_resource type="PackedScene" uid="uid://cw7jhqnscpwpd" path="res://scenes/14.tscn" id="15_nln5k"]
[ext_resource type="PackedScene" uid="uid://bp412xhmbrwy" path="res://scenes/15.tscn" id="16_rij7p"]
[ext_resource type="PackedScene" uid="uid://rtoc5wlps1fh" path="res://scenes/16.tscn" id="17_e2i55"]

[node name="Main" type="Node2D"]
script = ExtResource("1_ey2qo")
scene_1 = ExtResource("2_q266r")
scene_2 = ExtResource("3_frukf")
scene_3 = ExtResource("4_4d7pi")
scene_4 = ExtResource("5_n71t5")
scene_5 = ExtResource("6_hp1xy")
scene_6 = ExtResource("7_em202")
scene_7 = ExtResource("8_7eqsv")
scene_8 = ExtResource("9_uavix")
scene_9 = ExtResource("10_1ul6q")
scene_10 = ExtResource("11_ldtxg")
scene_11 = ExtResource("12_55gry")
scene_12 = ExtResource("13_op1cr")
scene_13 = ExtResource("14_y2fug")
scene_14 = ExtResource("15_nln5k")
scene_15 = ExtResource("16_rij7p")
scene_16 = ExtResource("17_e2i55")

[node name="Background" parent="." instance=ExtResource("1_dv138")]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3

[node name="HUD" parent="." groups=["Scale2"] instance=ExtResource("3_iacyd")]

[node name="InstructionsMenu" parent="." groups=["Scale2"] instance=ExtResource("5_8sbdr")]

[node name="CreditsMenu" parent="." groups=["Scale2"] instance=ExtResource("6_jn74s")]

[node name="GameOverMenu" parent="." groups=["Scale2"] instance=ExtResource("2_ppjvr")]

[node name="ExitMenu" parent="." groups=["Scale2"] instance=ExtResource("4_xo1td")]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="credits" from="HUD" to="." method="_on_hud_credits"]
[connection signal="instructions" from="HUD" to="." method="_on_hud_instructions"]
[connection signal="restart" from="HUD" to="." method="_on_hud_restart"]
[connection signal="resume" from="InstructionsMenu" to="." method="_on_instructions_menu_resume"]
[connection signal="close" from="CreditsMenu" to="." method="_on_credits_menu_close"]
[connection signal="restart" from="GameOverMenu" to="." method="_on_game_over_menu_restart"]
[connection signal="cancel" from="ExitMenu" to="." method="_on_exit_menu_cancel"]
[connection signal="exit" from="ExitMenu" to="." method="_on_exit_menu_exit"]
